project(OpenGenus-cosmos-sorting)

add_executable(BeadSort
    bead_sort/bead_sort.cpp
)

add_executable(BogoSort
    bogo_sort/bogo_sort.cpp
)

add_executable(BubbleSort
    bubble_sort/bubble_sort.cpp
)

add_executable(BucketSort
    bucket_sort/bucket_sort.cpp
)

add_executable(CircleSort
    circle_sort/circle_sort.cpp
)

add_executable(CombSort
    comb_sort/comb_sort.cpp
)